--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^7.32.0",
@@ -26,9 +28,12 @@
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "celebrate": "^15.0.0",
     "express": "^4.17.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
