--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -37,6 +38,7 @@
     "express": "^4.17.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.41"
   }
