--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,11 @@
   "rules": {
     "prettier/prettier": "error",
     "camelcase": "off",
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn", {
+        "argsIgnorePattern": "_"
+      }
+    ]
   }
 }
