--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.0.1",
     "celebrate": "^15.0.0",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
