--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
     "celebrate": "^15.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
